--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,5 +1,5 @@
 .contact-us{
-    height: 100vh;
+    
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -187,4 +187,127 @@ textarea:valid+label {
   .links {
     padding-top: 30px;
   }
+}
+
+
+
+/* SKS ABOUT SECTON */
+
+.sks{
+  padding-top: 12vh;
+  height: 70vh;
+  width: 100%;
+  margin-bottom: 50px;
+}
+.sks-row{
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(284.71deg, #A5E45E 4.75%, #4ECB71 70.9%);
+  margin: 0;
+}
+.sks-left{
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 60px;
+}
+.sks-left h1,
+.sks-left p{
+  color: #1D1E23;
+}
+.sks-right{
+  height: inherit;
+  text-align: right;
+}
+.sks-right img{
+    height: 100%;
+    object-fit: contain;
+}
+
+
+
+/* SKSplay ABOUT SECTON */
+
+
+.play-cont{
+  height: 100vh;
+  width: 100%;
+  background-image: url("../../asset/SKSbg.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  overflow-x: hidden;  
+}
+.play-row{
+ 
+  height: 90%;
+  
+}
+.play-row img{
+  height: 100%;
+  float: right;
+}
+.play-left{
+  height: 100%;
+
+}
+.play-right{
+  height: 100%;
+  padding: 40px;
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  flex-direction: column;
+}
+.play-right p{
+  width: 50%;
+  margin: 20px 0px;
+}
+
+/* SKSplay-MD ABOUT SECTON */
+
+.md-cont{
+  width: 100%;
+  background: linear-gradient(284.71deg, #A5E45E 4.75%, #4ECB71 70.9%);
+  padding: 50px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 100px;
+}
+.md-row{
+  text-align: center;
+  width: 50%;
+}
+.md-cont h1, .md-cont p{
+  color: #1D1E23;
+  margin: 15px;
+}
+
+/* TEAM ABOUT SECTON */
+
+.team-cont{
+  /* border: 2px solid #1ba577; */
+  margin-bottom: 100px;
+  text-align: center;
+}
+.team-cont img{
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  margin: 20px;
+  filter: grayscale(1);
+  border: 5px solid #A5E45E;
+  transition: all 400ms ease;
+}
+.team-cont img:hover{
+  filter: grayscale(0);
+  transform: scale(1.02);
+  transition: all 400ms ease;
+}
+
+.team-title{
+  text-align: center;
+  margin-bottom: 50px;
+  
 }
