--- a/src/components/Home/Landing.css
+++ b/src/components/Home/Landing.css
@@ -48,3 +48,69 @@
     width: 100%;
     height: 100%;
   }
+
+  @media only screen and (min-width: 1200px) {
+    .sm-hero{
+      display: none;
+    }
+  }
+  @media only screen and (max-width: 770px) {
+    *{
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    #home{
+      margin: 0;
+      padding: 0;
+    }
+    .desktop-hero{
+      display: none;
+    }
+    .sm-hero{
+      padding: 0;
+    }
+    .sm-row-hero{
+      height: 100vh;
+      width: 100%;
+      margin: 0;
+      padding: 0;
+      padding-top: 8vh;
+      text-align: center;
+      border-radius: 3rem 0rem 2rem 2rem;
+    }
+    .mobile-hero{
+      background-image: linear-gradient(to top, rgba(0, 0, 0, 0.788), rgba(0, 0, 0, 0.11)), url('../../asset/mobile-hero.png');
+      background-repeat: no-repeat;
+      box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+      border-radius: 10% 10% 41% 44% / 0% 0% 25% 26% ;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 50%;
+    }
+
+    .mobile-hero img{
+        width: 95vw;
+        position: relative;
+        bottom: 0;
+        transform: translateY(115px);
+        
+    }
+    .sks-btn{
+      font-size: 0.8rem;
+    }
+    .lower-hero{
+      /* border: 2px solid red; */
+      height: 50%;
+      margin-top: 50px;
+    }
+    .child{
+      background-color: #26272C;
+      height: 25%;
+      border-radius: 1rem;
+      margin-top: 1rem;
+      box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    }
+  }
