--- a/src/index.css
+++ b/src/index.css
@@ -21,9 +21,43 @@
   outline: none;
   background: var(--primary-buttom);
   color: black;
-  border-radius: 20px;
+  border-radius: 1.2rem;
   /* width: 110px; */
   padding: 8px 20px;
+}
+.sks-btn-sec{
+  border: none;
+  outline: none;
+  background: rgba(255, 255, 255, 0.089);
+  color: rgb(255, 255, 255);
+  backdrop-filter: blur(20px);
+  border-radius: 1.2rem;
+  /* width: 110px; */
+  padding: 8px 20px;
+}
+.sks-btn-black{
+  border: none;
+  outline: none;
+  background: #1D1E23;
+  color: rgb(255, 255, 255);
+  backdrop-filter: blur(20px);
+  border-radius: 1.5rem;
+  /* width: 110px; */
+  font-size: 1.5rem;
+  padding: 8px 20px;
+}
+.sks-btn-black:hover{
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  transform: scale(1.03);
+  color: white;
+}
+.home-btn{
+  font-size: 1.4rem;
+}
+.sks-btn-sec:hover{
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  transform: scale(1.03);
+  color: white;
 }
 .sks-btn:hover{
   color: black;
@@ -34,7 +68,14 @@ html{
   scroll-behavior: smooth;
 }
 ::-webkit-scrollbar{
-  display: none;
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #25d382;
+  border-radius: 20px;
 }
 a{
   text-decoration: none;
