--- a/src/components/Distributions/Sectionb.css
+++ b/src/components/Distributions/Sectionb.css
@@ -2,9 +2,8 @@
 
 #about{
     width: 100%;
-    height: 40vh;
     background: linear-gradient(243.01deg, #82f1af 33.13%, #2FCB6E 125.77%);
-    border: 2px solid black;
+    padding: 1rem;
 }
 .about_row{
     width: 100%;
@@ -15,20 +14,17 @@
 }
 .about_left_col{
     width: 70%;
-    height: 35vh;
     padding: 2rem;
-
 }
 
 .about_right_col{
     width: 30%;
     text-align: center;
-    flex:1 1 25rem;
     padding: 2rem;
-  
 }
 .about_right_col img{
-    width:20rem;
+    width:100%;
+    height: auto;
     filter: drop-shadow(2px 19px 18px rgba(0, 0, 0, 0.25));
    
 }
@@ -58,4 +54,26 @@
 .c_btn:hover{
     color: #2FCB6E;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+}
+@media (max-width: 600px){
+    .about_row{
+        display: block;
+    }
+    .about_left_col{
+        width: 100%;
+        padding: 0;
+        margin-bottom: 2rem;
+    }
+    .about_left_col p{
+        text-transform: capitalize;
+        margin: 2rem 0;
+        width: 100%;
+    }
+    .about_right_col{
+        width: 100%;
+        padding: 0;
+    }
+    .about_left_col h3{
+        font-size: 2rem;
+    }
 }
