--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,5 +1,5 @@
 .contact-us{
-    height: 100vh;
+    
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -186,5 +186,197 @@ textarea:valid+label {
   
   .links {
     padding-top: 30px;
+  }
+}
+
+
+
+/* SKS ABOUT SECTON */
+
+.sks{
+  padding-top: 12vh;
+  /* height: 70vh; */
+  width: 100%;
+  margin-bottom: 50px;
+}
+.sks-row{
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(284.71deg, #A5E45E 4.75%, #4ECB71 70.9%);
+  margin: 0;
+}
+.sks-left{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 60px;
+  height: 100%;
+}
+.sks-left h1,
+.sks-left p{
+  color: #1D1E23;
+}
+.sks-right{
+  width: 50%;
+  height: 100%;
+  text-align: right;
+}
+.sks-right img{
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+}
+@media (max-width: 600px){
+  .sks{
+    padding: 0;
+  }
+  .sks-left{
+    padding-top: 6rem;
+    width: 100%;
+    margin: 0;
+    padding: 5rem 2rem 2rem 2rem;
+    display: block;
+  }
+  .sks-left h1{
+    font-size: 2rem;
+    margin: 1rem 0rem 1rem 0rem;
+  }
+  .sks-left p{
+    width: 100%;
+    text-align: justify;
+  }
+
+}
+
+
+/* SKSplay ABOUT SECTON */
+
+
+.play-cont{
+  width: 100%;
+  background-image: url("../../asset/SKSbg.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  overflow-x: hidden;  
+}
+.play-row{
+ 
+  height: 90%;
+  
+}
+.play-row img{
+  height: 100%;
+  float: right;
+}
+.play-left img{
+  height: 80%;
+  width: auto;
+}
+.play-left{
+  height: 100%;
+
+}
+.play-right{
+  height: 100%;
+  padding: 40px;
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  flex-direction: column;
+}
+.play-right p{
+  width: 50%;
+  margin: 20px 0px;
+}
+
+/* SKSplay-MD ABOUT SECTON */
+
+.md-cont{
+  width: 100%;
+  background: linear-gradient(284.71deg, #A5E45E 4.75%, #4ECB71 70.9%);
+  padding: 50px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 100px;
+}
+.md-row{
+  text-align: center;
+  width: 50%;
+}
+.md-cont h1, .md-cont p{
+  color: #1D1E23;
+  margin: 15px;
+}
+@media (max-width: 600px){
+  .play-left img{
+    width: 100%;
+    height: auto;
+  }
+  .play-right{
+      width: 100%;
+      display: block;
+  }
+  .play-right p{
+    width: 100%;
+  }
+  .md-cont{
+    display: block;
+  }
+  .md-row{
+    width: 100%;
+    text-align: start;
+  }
+  .md-cont h1, .md-cont p{
+    margin: 0px;
+  }
+  .md-cont h1,.md-cont h2{
+    font-size: 1.7rem;
+  }
+  .md-cont p{
+    margin: 1rem 0rem 1rem 0rem;
+  }
+
+}
+/* TEAM ABOUT SECTON */
+
+.team-cont{
+  /* border: 2px solid #1ba577; */
+  margin-bottom: 100px;
+  text-align: center;
+}
+.team-cont img{
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  margin: 20px;
+  filter: grayscale(1);
+  border: 5px solid #A5E45E;
+  transition: all 400ms ease;
+}
+.team-cont img:hover{
+  filter: grayscale(0);
+  transform: scale(1.02);
+  transition: all 400ms ease;
+}
+
+.team-title{
+  text-align: center;
+  margin-bottom: 50px;
+  
+}
+.card{
+  width: 18rem;
+  align-items: center;
+}
+@media (max-width: 600px){
+  .team-members{
+    width: 100%;
+    display: block;
+  }
+  .card{
+    width: 100%;
+    padding: 0;
+    margin: 0;
   }
 }
